--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 /* Pagrindiniai stiliai */
 .footer {
-  background-color: #333;
+  background-color: black;
   color: white;
   padding: 32px 0 16px;
   font-family: Arial, sans-serif;
