--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 16px 32px;
-    background-color: #333;
+    background-color: black;
     color: white;
 }
 
